[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/visual/ui/logos/logo-main.png" type="Texture" id=1]
[ext_resource path="res://scripts/SplashScene.gd" type="Script" id=2]
[ext_resource path="res://assets/visual/ui/logos/logo-jam.png" type="Texture" id=3]
[ext_resource path="res://scenes/TransitionOverlay.tscn" type="PackedScene" id=4]

[node name="SplashScene" type="Node2D"]
script = ExtResource( 2 )

[node name="DevLogoSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="JamLogoSprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="BackgroundSprite" type="Sprite" parent="."]
centered = false

[node name="TransitionOverlay" parent="." instance=ExtResource( 4 )]
